<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_credit_card">Credit card</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="lbl_back">Back</string>
    <string name="msg_show_order_summ">Show order summary</string>
    <string name="lbl_number">Number</string>
    <string name="lbl_10_feb">10 Feb</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account?  Sign up</string>
    <string name="msg_1st_may_sat">1st  May- Sat -2:00 PM&#xd;</string>
    <string name="msg_confirm_passwor">Confirm password</string>
    <string name="lbl_shipping">Shipping</string>
    <string name="lbl_discount_code">Discount code</string>
    <string name="lbl_live">LIVE</string>
    <string name="lbl_about">About</string>
    <string name="lbl_home">Home</string>
    <string name="msg_enjoy_your_favo2">Enjoy your favorite dishe and a lovely your friends and family and have a great time. Food from local food trucks will be available for purchase. </string>
    <string name="msg_already_have_an">Already have an account?  Signin</string>
    <string name="msg_enjoy_your_favo3">Enjoy your favorite dishe and a lovely your friends and family and have a great time. Food from local food trucks will be available for purchase. Read More...</string>
    <string name="lbl_and_more">and more...</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="lbl_url">URL</string>
    <string name="lbl_ashfak_sayem">Ashfak Sayem</string>
    <string name="lbl_zenifero_bolex">Zenifero Bolex</string>
    <string name="lbl_250_meters">250 meters</string>
    <string name="msg_12_7_2002_20">12/7/2002 | 20:00</string>
    <string name="lbl_sign_in">Sign in</string>
    <string name="lbl_information">Information</string>
    <string name="lbl_your_password">Your password</string>
    <string name="lbl_pesta_ria">Pesta Ria</string>
    <string name="lbl_event2">event</string>
    <string name="lbl_0_20">0:20</string>
    <string name="lbl_pay_now">PAY now</string>
    <string name="lbl_mr">Mr.</string>
    <string name="lbl_change">Change</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_6281_2345_6789">+6281-2345-6789</string>
    <string name="lbl_location">Location</string>
    <string name="msg_9824_0972_1742">9824 0972 1742 1298</string>
    <string name="lbl_pop">Pop</string>
    <string name="lbl_seat">Seat</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_signin2">Signin</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="lbl_verification">Verification</string>
    <string name="lbl_musisi">Musisi</string>
    <string name="msg_login_with_goog">Login with Google</string>
    <string name="msg_international_b2">International Band Music Concert</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_metal">Metal</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_perform">perform</string>
    <string name="lbl_history">History</string>
    <string name="msg_don_t_have_an_a2">Don\u2019t have an account?  </string>
    <string name="lbl_helloo">HELLOO!!!</string>
    <string name="lbl_search2">Search</string>
    <string name="lbl_orchestra">Orchestra</string>
    <string name="msg_already_have_an2">Already have an account?  </string>
    <string name="msg_jo_malone_londo">Jo malone london\u2019s mother\u2019s day </string>
    <string name="lbl_re_send_code_in">Re-send code in </string>
    <string name="lbl_payment">Payment</string>
    <string name="msg_enter_the_title">Enter the title here</string>
    <string name="msg_change_profile">Change profile photo</string>
    <string name="lbl_about_event">About Event</string>
    <string name="lbl_filters">Filters</string>
    <string name="msg_verification_ti">Verification Ticket</string>
    <string name="lbl_followers">Followers</string>
    <string name="lbl_card_number">Card number</string>
    <string name="lbl_105_00">$105.00</string>
    <string name="msg_save_my_informa">Save my information for a faster checkout</string>
    <string name="lbl_772896a45">772896A45</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_upcoming_events">Upcoming Events</string>
    <string name="msg_we_ve_send_you">We\u2019ve send you the verification code on +1 2620 0323 7631</string>
    <string name="msg_same_as_contact">Same as contact detail</string>
    <string name="msg_type_a_message">Type a message...</string>
    <string name="msg_show_your_suppo">Show your support for the team at Plant store</string>
    <string name="lbl_read_more2">Read More...</string>
    <string name="lbl_tradisional">Tradisional</string>
    <string name="lbl_19_60">$19.60</string>
    <string name="msg_rocks_velkeinje">Rocks Velkeinjen</string>
    <string name="msg_bayu99_example">bayu99@example.com</string>
    <string name="lbl_350">350</string>
    <string name="lbl_dangdut">Dangdut</string>
    <string name="lbl_guntur">Guntur</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_bayu_chndr">bayu.chndr</string>
    <string name="msg_international_k">International kids safe parents night out</string>
    <string name="lbl_hi_jay">Hi, Jay!</string>
    <string name="lbl_filter">Filter</string>
    <string name="msg_cinemas_is_the">Cinemas is the ultimate experience to see new movies in Gold Class or Vmax. Find a cinema near you.</string>
    <string name="lbl_20">20%</string>
    <string name="msg_international_g">International gala music festival</string>
    <string name="msg_36_guild_street">36 Guild Street London, UK </string>
    <string name="msg_international_b">International Band Mu...</string>
    <string name="msg_enter_the_link">Enter the link here</string>
    <string name="lbl_genre">Genre</string>
    <string name="lbl_lotus">Lotus</string>
    <string name="lbl_rock">Rock</string>
    <string name="msg_all_transaction">All transactions are secure and encrypted.</string>
    <string name="msg_current_locatio">Current Location</string>
    <string name="msg_women_s_leaders">"Women's leadership conference"</string>
    <string name="lbl_346">346</string>
    <string name="lbl_about_me">About Me</string>
    <string name="lbl_security_code">Security code</string>
    <string name="msg_tuesday_4_00pm">Tuesday, 4:00PM - 9:00PM</string>
    <string name="lbl_follow">Follow</string>
    <string name="msg_ok_how_about_t">Ok, how about these?</string>
    <string name="lbl_see_all">See All</string>
    <string name="msg_re_send_code_in">Re-send code in  0:20</string>
    <string name="lbl_10">10
</string>
    <string name="lbl_new_yourk_usa">New Yourk, USA</string>
    <string name="lbl_sign_up">Sign up</string>
    <string name="lbl_go_to_payment">Go to payment</string>
    <string name="msg_cianggur_jawa">Cianggur, Jawa Selatan</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_15">15%</string>
    <string name="lbl_18">18%</string>
    <string name="lbl_17_64">$17.64</string>
    <string name="lbl_1_b">1 B</string>
    <string name="lbl_10_june">10
June</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_read_more">Read More</string>
    <string name="lbl_14_70">$14.70</string>
    <string name="lbl_add_video">Add Video</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_contact_detail">Contact Detail</string>
    <string name="lbl_audition">Audition</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_nearby_event">Nearby Event</string>
    <string name="lbl_bayu_chandra">Bayu Chandra</string>
    <string name="msg_expiration_date">Expiration date (MM / YY)</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_gigantic_konser">Gigantic Konser</string>
    <string name="msg_a_virtual_eveni">A virtual evening of smooth jazz&#xd;</string>
    <string name="lbl_my_event">My Event</string>
    <string name="lbl_event">Event</string>
    <string name="lbl_search">Search...</string>
    <string name="msg_gala_convention">Gala Convention Center</string>
    <string name="lbl_630_meters">630 meters</string>
    <string name="lbl_1">1</string>
    <string name="msg_1st_may_2_00">1st  May | 2:00 PM&#xd;</string>
    <string name="lbl_buy_ticket_120">Buy Ticket $120</string>
    <string name="msg_thank_you_we_a">Thank you, we appreciate it</string>
    <string name="lbl_tipe">Tipe</string>
    <string name="msg_14_december_20">14 December, 2021</string>
    <string name="lbl_event_organizer">Event Organizer</string>
    <string name="lbl_name_on_card">Name on card</string>
    <string name="lbl_24_7">24/7</string>
    <string name="lbl_cart">Cart</string>
    <string name="lbl_messages">Messages</string>
    <string name="lbl_add_tip">Add tip</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_following">Following</string>
    <string name="lbl_wed_8_21_am">Wed 8:21 AM</string>
    <string name="msg_show_me_other_o">Show me other options</string>
    <string name="lbl_5_0">5.0</string>
    <string name="lbl_4_1_2021">4-1-2021</string>
    <string name="lbl_abc_email_com">abc@email.com</string>
    <string name="lbl_20_120">$20-$120</string>
    <string name="lbl_concer">Concer</string>
    <string name="lbl_angelina_zolly">Angelina Zolly</string>
    <string name="lbl_or">OR</string>
    <string name="lbl_singer">Singer</string>
    <string name="lbl_june">June</string>
    <string name="lbl_remember_me2">Remember me</string>
    <string name="lbl_event_details">Event Details</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_guest_details">Guest Details</string>
    <string name="msg_select_price_ra">Select price range</string>
    <string name="lbl_none">None</string>
    <string name="lbl_remember_me">Remember Me</string>
    <string name="msg_enjoy_your_favo">Enjoy your favorite dishe and a lovely your friends and family and have a great time. Food from local food trucks will be available for purchase. Read More</string>
    <string name="lbl_detail">Detail</string>
    <string name="lbl_full_name">Full name</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_please_enter_valid_nu">Please enter valid number</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
