<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="editProfileVM" type="com.bangkit.elise.modules.editprofile.data.viewmodel.EditProfileVM"/>
    </data>
    <LinearLayout android:id="@+id/linearEditProfile"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_48pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearActionBarWit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="@dimen/_15pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEditProfile"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_weight="0.89"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{editProfileVM.editProfileModel.txtEditProfile}"
                    style="@style/txtDMSansmedium24" tools:text="@string/lbl_edit_profile"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ImageView android:id="@+id/imageImageEightyNine"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_96pxh"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="@dimen/_96pxh"
            android:scaleType="centerCrop" circular="@{true}"
            imageRes="@{@drawable/img_image89}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image89"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtChangeprofile"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:singleLine="true"
            android:text="@{editProfileVM.editProfileModel.txtChangeprofile}"
            style="@style/txtDMSansbold14_1" textUnderline="true" tools:text="@string/msg_change_profile"/>
        <TextView android:ellipsize="end" android:id="@+id/txtValue"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_44pxh"
            android:layout_marginStart="@dimen/_44pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:singleLine="true"
            android:text="@{editProfileVM.editProfileModel.txtValue}"
            style="@style/txtDMSansbold14" tools:text="@string/lbl_username"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtWeburl"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@{editProfileVM.editProfileModel.txtWeburl}"
            style="@style/txtSolidRoundedOutline_2" tools:text="@string/lbl_bayu_chndr"/>
        <TextView android:ellipsize="end" android:id="@+id/txtValueOne"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_44pxh"
            android:layout_marginStart="@dimen/_44pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:singleLine="true"
            android:text="@{editProfileVM.editProfileModel.txtValueOne}"
            style="@style/txtDMSansbold14" tools:text="@string/lbl_full_name"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnnamefield"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_3">
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtNamefield"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingStart="@dimen/_15pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@{editProfileVM.editProfileModel.txtNamefield}"
                style="@style/txtSolidRoundedOutline_2" tools:text="@string/lbl_bayu_chandra"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtValueTwo"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_44pxh"
            android:layout_marginStart="@dimen/_44pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:singleLine="true"
            android:text="@{editProfileVM.editProfileModel.txtValueTwo}"
            style="@style/txtDMSansbold14" tools:text="@string/lbl_email"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtEmail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@{editProfileVM.editProfileModel.txtEmail}"
            style="@style/txtSolidRoundedOutline_2" tools:text="@string/msg_bayu99_example"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtValueThree"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_44pxh"
            android:layout_marginStart="@dimen/_44pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:singleLine="true"
            android:text="@{editProfileVM.editProfileModel.txtValueThree}"
            style="@style/txtDMSansbold14" tools:text="@string/lbl_address"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtNamefieldOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@{editProfileVM.editProfileModel.txtNamefieldOne}"
            style="@style/txtSolidRoundedOutline_2" tools:text="@string/msg_cianggur_jawa"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearRowcheckmark"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_23pxv"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_85pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStyleindigo_1">
            <ImageView android:id="@+id/imageCheckmark"
                android:layout_height="@dimen/_20pxh"
                android:layout_marginBottom="@dimen/_23pxv"
                android:layout_marginStart="@dimen/_141pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="@dimen/_20pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_checkmark_white_a700"
                tools:ignore="ContentDescription" tools:src="@drawable/img_checkmark_white_a700"/>
            <TextView android:ellipsize="end" android:id="@+id/txtSave"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_21pxv"
                android:layout_marginEnd="@dimen/_139pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_weight="0.67" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{editProfileVM.editProfileModel.txtSave}"
                style="@style/txtDMSansmedium18_5" tools:text="@string/lbl_save"/>
        </LinearLayout>
    </LinearLayout>
</layout>
