<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="cardsRowModel" type="com.bangkit.elise.modules.navigationbar.data.model.CardsRowModel"/>
    </data>
    <LinearLayout android:gravity="start" android:id="@+id/linearGymFit"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical" style="@style/groupStylewhite_1">
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtGiganticKonser"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:singleLine="true"
            android:text="@{cardsRowModel.txtGiganticKonser}"
            style="@style/txtDMSansdmsansbold16" tools:text="@string/lbl_gigantic_konser"/>
        <LinearLayout android:gravity="center_vertical"
            android:id="@+id/linearOpeningHours"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageClock"
                android:layout_height="@dimen/_13pxh"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_13pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_clock"
                tools:ignore="ContentDescription" tools:src="@drawable/img_clock"/>
            <TextView android:ellipsize="end" android:id="@+id/txtPrice"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_9pxh"
                android:layout_weight="0.88" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{cardsRowModel.txtPrice}"
                style="@style/txtDMSansdmsansmedium12" tools:text="@string/msg_12_7_2002_20"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearLocation"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageReply"
                android:layout_height="@dimen/_13pxh"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_11pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_reply"
                tools:ignore="ContentDescription" tools:src="@drawable/img_reply"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDistance"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_weight="0.85" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{cardsRowModel.txtDistance}"
                style="@style/txtDMSansdmsansmedium12" tools:text="@string/lbl_250_meters"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearFeedback"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageStar"
                android:layout_height="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_16pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_star_16x16"
                tools:ignore="ContentDescription" tools:src="@drawable/img_star_16x16"/>
            <TextView android:ellipsize="end" android:id="@+id/txtFifty"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_weight="0.53" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@{cardsRowModel.txtFifty}"
                style="@style/txtDMSansdmsansmedium12" tools:text="@string/lbl_5_0"/>
        </LinearLayout>
    </LinearLayout>
</layout>
